feature: working on request validation

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,6 +17,7 @@
         "githubsync",
         "hashlib",
         "hexdigest",
+        "Hookshot",
         "Hostnames",
         "kconvert",
         "KEYPAIR",
@@ -24,6 +25,7 @@
         "localnet",
         "ncat",
         "nfsvers",
+        "nicc",
         "nmap",
         "nosql",
         "OLDPWD",
