feature: started working on the github sync server starter lambda function

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -38,6 +38,7 @@
         "setuptools",
         "Snyk",
         "strugling",
+        "syncserver",
         "Tierings",
         "traceback",
         "zcat",
