feature: started working on the github sync server starter lambda function

--- a/labs/lab3-non-kinesis-example/cloudformation/4200_github_deployment_resources.yaml
+++ b/labs/lab3-non-kinesis-example/cloudformation/4200_github_deployment_resources.yaml
@@ -215,7 +215,7 @@ Resources:
           Statement:
           - Effect: Allow
             Action:
-            - "sqs:SendMessage"
+            - "sqs:GetQueueAttributes"
             Resource: !GetAtt GitHubSyncRequestQueue.Arn
       RoleName: GitHubSyncServerStarterLambdaFunctionRole
 
