--- a/labs/lab3-non-kinesis-example/cloudformation/4200_github_deployment_resources.yaml
+++ b/labs/lab3-non-kinesis-example/cloudformation/4200_github_deployment_resources.yaml
@@ -226,6 +226,7 @@ Resources:
             - "ec2:DescribeInstances"
             - "ec2:RunInstances"
             - "ec2:DescribeLaunchTemplateVersions"
+            - "ec2:CreateTags"
             Resource: "*"
       RoleName: GitHubSyncServerStarterLambdaFunctionRole
 
