doc: updated progress

--- a/labs/lab3-non-kinesis-example/cloudformation/4200_github_deployment_resources.yaml
+++ b/labs/lab3-non-kinesis-example/cloudformation/4200_github_deployment_resources.yaml
@@ -226,6 +226,10 @@ Resources:
             - "ec2:DescribeInstances"
             - "ec2:DescribeLaunchTemplateVersions"
             - "ec2:CreateTags"
+            - "ec2:CreateNetworkInterface"
+            - "ec2:CreateNetworkInterfacePermission"
+            - "ec2:CreateTags"
+            - "ec2:CreateVolume"
             Resource: "*"
       - PolicyName: GitHubSyncServerStarterLambdaFunctionPolicy04
         PolicyDocument:
