feature: working on github syncserver logic

--- a/labs/lab3-non-kinesis-example/cloudformation/4200_github_deployment_resources.yaml
+++ b/labs/lab3-non-kinesis-example/cloudformation/4200_github_deployment_resources.yaml
@@ -465,7 +465,7 @@ Resources:
               pip3 install -r /home/ec2-user/script/requirements.txt
               curl $SCRIPT_FILE --output /home/ec2-user/script/github_sync.py --silent
 
-              echo "${SqsUrl}" > /tmp/sqs_url"
+              echo "${SqsUrl}" > /tmp/sqs_url
 
               cat << EOF >> /lib/systemd/system/githubsync.service
               [Unit]
