feature: working on github syncserver logic

--- a/labs/lab3-non-kinesis-example/cloudformation/4200_github_deployment_resources.yaml
+++ b/labs/lab3-non-kinesis-example/cloudformation/4200_github_deployment_resources.yaml
@@ -466,6 +466,7 @@ Resources:
               curl $SCRIPT_FILE --output /home/ec2-user/script/github_sync.py --silent
 
               echo "${SqsUrl}" > /tmp/sqs_url
+              TOKEN=`curl -X PUT "http://169.254.169.254/latest/api/token" -H "X-aws-ec2-metadata-token-ttl-seconds: 21600"` && curl -H "X-aws-ec2-metadata-token: $TOKEN" -v http://169.254.169.254/latest/meta-data/instance-id > /tmp/instance-id
 
               cat << EOF >> /lib/systemd/system/githubsync.service
               [Unit]
