feature: working on github syncserver logic

--- a/labs/lab3-non-kinesis-example/cloudformation/3200_interface_vpc_endpoint_base_stack.yaml
+++ b/labs/lab3-non-kinesis-example/cloudformation/3200_interface_vpc_endpoint_base_stack.yaml
@@ -75,8 +75,8 @@ Resources:
         - !Ref VpcEndPointSecurityGroup
       ServiceName: !Ref VpcEndPointServiceName
       SubnetIds: 
-        - Fn::ImportValue: !Sub "${VpcStackNameParam}-PrivateVpcSubnet1Id"
-        - Fn::ImportValue: !Sub "${VpcStackNameParam}-PrivateVpcSubnet2Id"
+        # - Fn::ImportValue: !Sub "${VpcStackNameParam}-PrivateVpcSubnet1Id"
+        # - Fn::ImportValue: !Sub "${VpcStackNameParam}-PrivateVpcSubnet2Id"
         - Fn::ImportValue: !Sub "${VpcStackNameParam}-PrivateVpcSubnet3Id"
       VpcEndpointType: "Interface"
       VpcId:
