--- a/labs/lab3-non-kinesis-example/cloudformation/4200_github_deployment_resources.yaml
+++ b/labs/lab3-non-kinesis-example/cloudformation/4200_github_deployment_resources.yaml
@@ -288,6 +288,24 @@ Resources:
       Runtime: "python3.8"
       Timeout: 30
 
+  GitHubSyncServerStarterRule:
+    Type: 'AWS::Events::Rule'
+    Properties:
+      Description: "Rule to trigger periodically and call GitHubSyncServerStarterLambdaFunction"
+      Name: GitHubSyncServerStarterCronRule
+      State: ENABLED
+      ScheduleExpression: "rate(10 minutes)"
+      Targets:
+        - Arn: !GetAtt GitHubSyncServerStarterLambdaFunction.Arn
+          Id: IdGitHubSyncServerStarterRule01
+          
+  GitHubSyncServerStarterPermission: 
+    Type: AWS::Lambda::Permission
+    Properties: 
+      FunctionName: !Ref GitHubSyncServerStarterLambdaFunction
+      Action: "lambda:InvokeFunction"
+      Principal: "events.amazonaws.com"
+      SourceArn: !GetAtt GitHubSyncServerStarterRule.Arn
 
 #######################################################################################################################
 ###                                                                                                                 ###
