feature: working on github syncserver logic

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -41,6 +41,7 @@
         "syncserver",
         "Tierings",
         "traceback",
+        "WORKDIR",
         "zcat",
         "zfill",
         "ZSTD"
