feature: working on github syncserver logic

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -41,6 +41,8 @@
         "syncserver",
         "Tierings",
         "traceback",
+        "untar",
+        "untarred",
         "WORKDIR",
         "zcat",
         "zfill",
