--- a/labs/lab3-non-kinesis-example/cloudformation/4200_github_deployment_resources.yaml
+++ b/labs/lab3-non-kinesis-example/cloudformation/4200_github_deployment_resources.yaml
@@ -470,10 +470,13 @@ Resources:
               mount -t nfs -o nfsvers=4.1 ${OpenZfsDnsName}:/fsx/ /data
               mkdir /data/github
               mkdir /data/logs
+              mkdir /data/deployments
               chmod 777 /data/github
               chmod 777 /data/logs
+              chmod 777 /data/deployments
 
               echo "GITHUB_WORKDIR=/data/github" >> /etc/environment
+              echo "DEPLOYMENT_TARGET_DIR=/data/deployments" >> /etc/environment
 
               mkdir /home/ec2-user/script
               chown ec2-user:ec2-user /home/ec2-user/script
