feature: working on github syncserver logic

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -23,6 +23,7 @@
         "KEYPAIR",
         "levelname",
         "localnet",
+        "mdep",
         "ncat",
         "nfsvers",
         "nicc",
