--- a/labs/lab3-non-kinesis-example/cloudformation/5000_api_gw_base.yaml
+++ b/labs/lab3-non-kinesis-example/cloudformation/5000_api_gw_base.yaml
@@ -8,10 +8,11 @@ Description: >
 # Metadata:
 #   template metadata
 
-# Parameters:
-#   S3EventBucketParam:
-#     Type: String
-#     Description: "The name of the S3 bucket where the incoming event data will be stored. This is the Event store."
+Parameters:
+  CorsTrustedDomainsParam:
+    Type: String
+    Description: "A CSV string with trusted domains for API calls. Example to add two sites: https://www.example.tld,http://localhost:5000"
+    Default: "http://localhost,http://localhost:9000,https://internal.sandybox.com"
 #   FirstTrustedInternetCider:
 #     Type: String
 #     Description: "CIDR of a host or network from the Internet to trust for incoming traffic to the Public VPC"
@@ -55,13 +56,14 @@ Resources:
         - PUT
         - DELETE
         AllowOrigins: 
-        - "http://localhost"
-        - "http://localhost:9000"
+          Fn::Split:
+          - ","
+          - !Ref CorsTrustedDomainsParam
         ExposeHeaders: 
         - "Date"
         - "x-api-id"
         MaxAge: 86400
-      Description: "The Internet facing HTTP API for publishing events from external sources, like web sites"
+      Description: "A Public API Gateway"
       DisableExecuteApiEndpoint: false  # For production, this will typically be disabled/true to force clients to use the custom domain
       Name: "lab3-api"
       ProtocolType: "HTTP"
