lab3: working on web server stack

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
         "bbbbafd",
         "boto",
         "ccefab",
+        "chkconfig",
         "clazz",
         "Cooldown",
         "crossmnt",
@@ -44,6 +45,7 @@
         "traceback",
         "untar",
         "untarred",
+        "usermod",
         "WORKDIR",
         "zcat",
         "zfill",
